# cloudmind-dwg-function

./: .gitignore  AzuriteConfig  DwgProcessor.cs  Program.cs  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  __azurite_db_table__.json  cloudmind-dwg-function.csproj  cloudmind-dwg-function.sln  cloudmind_dwg_function.csproj  cloudmind_dwg_function.sln  host.json  package-lock.json
Functions/: GetPdfSas.cs  GetUploadSas.cs  ListPdfs.cs
Properties/: launchSettings.json
Services/APS/: ApsAuthService.cs  ApsModelDerivativeService.cs  ApsOssService.cs
Services/ODA/: DwgProcessor.json  OdaPdfService.cs
cloudmind-dwg-ui/: index.html  package-lock.json  package.json
cloudmind-dwg-ui/src/: App.jsx
oda/: ACCAMERA.tx  AECIIB.tx  ATEXT.tx  AcDbPointCloudObj.tx  AcDgnLS.tx  AcGeolocationObj.tx  AcIdViewObj.tx  AcMPolygonObj15.tx  AcModelDocObj.tx  AcTrace.tx  AsdkSmileyDb.tx  AutoSurfServices.tx  BlockExtractor  DbCommands.tx  DbCryptModule.tx  DbRuntimeIO.tx  DgGeoDataEx.tx  DgPlotStyleServices.tx  DwfxSignatureHandler.tx  DwgConstraints.tx  ExCommands.tx  ExCustObjs.tx  ExDgnAutoplantEntities.tx  ExDgnCurveFunctions.tx  ExDgnDatabaseRecovery.tx  ExDgnDumper.tx  ExDgnElementIntersect.tx  ExDgnGeoDataReprojection.tx  ExDgnGeoMapImage.tx  ExDgnGripPoints.tx  ExDgnImportLineStyle.tx  ExDgnRecomputeAssocPoints.tx  ExDimAssoc.tx  ExDwgIfc.tx  ExDwgStep.tx  ExDynamicBlocks.tx  ExEntityIntersection.tx  ExEvalWatchers.tx  ExFMBody.tx  ExFieldEvaluator.tx  (+63 more)
oda_wrapper/: CMakeLists.txt  main.cpp
(+6 files in other folders)
